Add simple support for a kipper1 target machine.

--- a/README
+++ b/README
@@ -68,6 +68,8 @@ that wants to have persistence.
 
 * 'smii' - see miscsbc.c for details
 
+* 'kipper1' - see miscsbc.c for details
+
 TODO : Would anyone be interested in a CoCo machine type?
 
 -----------------------------------------------------------------
