--- a/README
+++ b/README
@@ -80,8 +80,8 @@ Faults
 Debugging
 
 
-The simulator supports interactive debugging similar to that
-provided by 'gdb'.
+The simulator supports interactive debugging, similar to that
+provided by 'gdb', using the following commands:
 
 b <expr>
 	Set a breakpoint on EXECUTION at the given address. Eg:
@@ -89,7 +89,7 @@ b <expr>
 	- break next time
 	break 0xf000 ignore 4
 	- ignore 4 times then break on 5th time
-	break 0x1200 if <expression>
+	break 0x1200 if <expr>
 	break 0x1200 if $s==02:0x0043
 	- break if the S register has the value shown.
 
@@ -159,13 +159,23 @@ n
 	If the current instruction is a call, then the debugger
 	resumes after control returns.
 
-p <expr>
-	Print the value of an expression. See "Expressions" below.
+p [format] <expr>
+	Print the value of an expression. See 'Expressions'
+	below. Eg:
+	p/f <expr>
+	- f specifies format. See below.
+	p <expr>
+	- use the previous format.
+
+	f is the display format (default x for hex). Options:
+	  x X d u o a s (match printf).
+
+        TODO: the code supports /u (unit) as well, but the b w
+        options don't make any obvious difference to the output.
 
 pc <expr>
 	Set the CPU program counter to <expr> and list
-	(disassemble) CPU instructions at that address. Without
-	<expr>, acts like 'regs'.
+	(disassemble) CPU instructions at that address.
 
 q
 	Quit the simulator.
@@ -181,15 +191,25 @@ restore
 	Restore machine state from a 'dump' file. NOT CURRENTLY
 	IMPLEMENTED.
 
-runfor <expr>
-	Continue but break after a certain period of (simulated) time.
+runfor <number> [units]
+	Continue but break after a certain period of (simulated)
+	time. The time can be expressed in ms (default) or s.
+	The 'runfor' command cannot be nested; issuing a
+        'runfor' cancels any 'runfor that is in progress. Eg:
+	runfor 100 ms
+	runfor 1 s
+	runfor 0      -- give 'bad time value' error, but still
+	                 cancels a 'runfor' in progress.
 
 s  <expr>
-	Step for a certain number of CPU instructions (1 by default).
+	Step for a certain number of CPU instructions (1 by
+	default).
 
 set <expr>
-	Sets the value of an internal variable or target memory.
-	See "Expressions" below for details on the syntax.
+set var <expr>
+	Sets the value of a location in target memory or the
+	value of an internal variable.
+	See 'Expressions' below for details on the syntax.
 
 so <file>
 	Run a set of debugger commands from another file.
@@ -208,8 +228,8 @@ td
 vars
 	Show all program variables.
 
-x <expr>
-	Examine target memory at the address given. Eg:
+x [format] <expr>
+	Examine target memory at the address  <expr>. Eg:
 	x/nfu addr
 	- nfu specifies number, format, unit respectively. See
           below.
@@ -232,14 +252,14 @@ x <expr>
 	x $pc
 	x $pc+8
 
-	white-space is not supported in the expression, so
-	that '$pc +8' is treated in the same way as '$pc'.
+	- see 'Expressions' below.
 
 info
         Describe machine, devices and address mapping.
 
------------------------------------------------------------------
+
 Symbol Tables
+=============
 
 Exec09 maintains variables, in 3 separate symbol tables:
 
@@ -247,7 +267,7 @@ Exec09 maintains variables, in 3 separate symbol tables:
   using the 'sym' command. The contents of this table is
   displayed by the 'vars' command.
   Entries in the program table are annotated onto 'list', 'step'
-  'x' output.
+  and 'x' output.
 
 - The auto table. The variables in this table are pre-defined.
   The following variables refer to CPU registers:
@@ -257,32 +277,192 @@ Exec09 maintains variables, in 3 separate symbol tables:
     et - number of cycles elapsed since et was last inspected.
     irqload - the average number of cycles spent in IRQ.
 
-  Auto variables can be referenced in expressions using a $ prefix.
+- The internal table. Variables are added to this table
+  using the 'set var' command.
 
-- The internal table. The ...
+The three groups of variables behave in different ways:
+
+Entries in the program table:
+
+- converted to absolute address values when they are loaded.
+- cannot be modified.
+- new entries cannot be created interactively
+- return either an address (their value) or the data at
+  the addressed location, depending upon the context.
+
+Eg: consider a variable 'start' referring to address 0x200.
+The byte at address 0x200 is 0xab.
+
+set start=5           -- changes the byte at address 0x200
+                         from 0xab to 0x05.
+print start           -- displays byte from location 0x200
+print &start          -- displays 0x200
+break start           -- breakpoint at 0x200
+list  start           -- list at 0x200
+examine start         -- read/display memory at 0x200
+
+Entries in the auto table:
+
+- can be modified
+- new entries cannot be created interactively
+- a print always returns the value
+- a set always changes the value (no memory read/write)
+
+Entries in the internal table:
+
+- can be created interactivelt using 'set var'
+- can be modified
+- are not converted to absolute address values
+- return either an address (their value) or the data at
+  the addressed location, depending upon the context.
+
+Eg: consider the creation of a variable 'fred' from a
+pre-existing program variable 'start':
+
+set var fred=&start+2
+
+'fred' can now be used in exactly the same way as the
+examples above showed for 'start'.
 
 
-
-
------------------------------------------------------------------
 Expressions
+===========
 
-set
-        does nothing
+Many of the debug commands accept an expression. An expression
+is one or more numbers or variables, combined using operators.
+Eg: $pc+8
 
-set foo
-        do_set foo
-set var
-        do_set $
+Depending on the context, an expression might be an rvalue or
+might be of the form lvalue=rvalue. In both cases, no
+white-space is allowed: the expression is silently truncated
+at the white-space, so that $pc + 8 is treated the same way
+as $pc.
 
-set var foo
-        do_set foo (ie, same as 'set foo')
+The 'print' command evalutes and displays the value of an
+rvalue and simultaneously creates an auto-table entry of the
+form $<num> where <num> increments for each successive command.
+Eg:
+
+$1 = 0x12
+(dbg) print 2 + 4
+$2 = 0x02
+(dbg) print $1
+$3 = 0x12
+
+The values of these auto-table entries ($1, $2, $3 etc.) are
+static. Eg:
+
+(dbg) print $pc
+$4 = 0xE012
+(dbg) step
+02:0x0013 6EB1                  JMP   [,Y++]
+(dbg) print $pc
+$5 = 0xE013
+(dbg) print $4
+$6 = 0xE012
+
+In this example, the 'print $4' returned the original value
+calculated, not the value resulting from the update of pc.
+
+There are also two short-hand forms for referring to $<num>
+values:
+
+$   refers to the most recent entry
+$$n refers to the value from n entries ago.
+$   is equivalent to $$0.
+
+Eg:
+
+(dbg) print 5
+$0 = 0x05
+(dbg) print 6
+$1 = 0x06
+(dbg) print 7
+$2 = 0x07
+(dbg) print 8
+$3 = 0x08
+(dbg) print $$2
+$4 = 0x06
+(dbg) print $
+$5 = 0x06
+
+The 'print' command also accepts an expression of the form
+lvalue=rvalue in which case it performs a memory store (like
+'set') but also displays the value written. Eg:
+
+(dbg) print 0=0xab
+$60 = 0x00ab
+(dbg) x/4X 0
+01:0x0000                    : 0xAB 0xE5 0x1D 0x5A
+
+The 'set' command can change memory and can create/change
+entries in the internal symbol table. Eg:
+
+(dbg) x/4 0
+01:0x0000                    : 0x00 0x00 0x00 0x00
+(dbg) set 0=0x12
+(dbg) set 3=0x1b
+(dbg) x 0
+01:0x0000                    : 0x12 0x00 0x00 0x1B
+(dbg) set var fred=0x10000001
+(dbg) x 0
+01:0x0000                    : 0x12 0x00 0x00 0x1B
+(dbg) print fred
+$0 = 0x00
+(dbg) set fred=0xab
+(dbg) x 0
+01:0x0000                    : 0x12 0xAB 0x00 0x1B
+(dbg) print &fred
+$1 = 0x10000001
+
+If the lvalue is numeric, it is treated as an address and
+the result is a byte write to target memory. If the lvalue
+is a variable prefixed with '&' the result is an update to
+the variable's value.
+
+Numbers are implicitly decimal. A leading 0 indicates an
+octal number and a leading 0x indicates a hex number.
+
+The following operators are supported:
+
+unary +, unary -, +, -, *, / == != &
+
+Evaluation of expressions follows the usual rule that *, / bind
+more tightly than +, - so that '4+3*7' evaluates to the same
+result as '3*7+4'.
+
+The result of ==, !=  is 1 (true) or 0 (false).
+
+The '&' is an indirection operator. &4 is the contents of
+address 4 in the target machine (however, this is of limited
+use because only byte access is supported).
+
+The following expression errors are detected and reported:
+
+- bad operator in expression
+- bad lvalue
+- bad rvalue
+- non-existent symbol
+- non-existent auto symbol
+- bad numeric literal
+- unrecognised $symbol in assignment
+- missing assignment
+
+However, the error-checking is not rigorous. In particular:
+
+- an expression is silently truncated at first white-space
+- an unrecognised operator is silently ignored
+- set 3+1=9 does a write to location 4, but you cannot use
+  arithmetic on the LHS with variables.
+- an error in an assignment is reported but the assignment
+  may have happened (Eg, to the wrong location or with the
+  wrong value).
 
 -----------------------------------------------------------------
 Original README text from Arto:
 
 
-simple 6809 simulator under GPL licence
+simple 6809 simulator under GPL licencel
 
 NOTE! this software is beta stage, and has bugs.
 To compile it you should have 32-bit ANSI C complier.
