Add new -os9call switch to make SWI2 be reported with a post-byte in disassembly. Thanks to Ole for the idea/code.

--- a/README
+++ b/README
@@ -92,6 +92,11 @@ Faults
 
 
 -----------------------------------------------------------------
+Command-line options
+
+Use -help to see the command-line options.
+
+-----------------------------------------------------------------
 Debugging
 
 
